be-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: lmskubernetesacr.azurecr.io/backend # Replace with your ACR image name and tag
          ports:
            - containerPort: 3000
