fe-deploymet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: lmskubernetesacr.azurecr.io/frontend # Replace with your ACR image and tag
          ports:
            - containerPort: 80
