be-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000 #expose port
      targetPort: 3000 #container port
  type: ClusterIP
